@@ -129,6 +129,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - LaTeX                  Matthais Pospiech
 - Liberty BASIC          Chris Iverson
 - Lisp                   Roberto Rossi
+- LLVM                   Azriel Fasten
 - Locomotive Basic       Nacho Cabanes
 - Logtalk                Paulo Moura
 - LOLcode                Benny Baumann
